rename plugin and remove Russian translation

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,6 +1,6 @@
-ImageReactionSource="Image Reaction"
+ImageReactionSource="PNG Tuber"
 Reaction1="Image when silence"
-Reaction2="Image when sound"
+Reaction2="Image when speaking"
 AnimReset1="Reset animation of the first image after reaction"
 AnimReset2="Reset animation of the second image after reaction"
 UnloadWhenNotShowing="Unload image when not showing"
