add blinking support

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,10 +1,16 @@
 ImageReactionSource="PNG Tuber"
-Reaction1="Image when silence"
-Reaction2="Image when speaking"
-AnimReset1="Reset animation of the first image after reaction"
-AnimReset2="Reset animation of the second image after reaction"
-UnloadWhenNotShowing="Unload image when not showing"
+Reaction1="silence"
+Reaction2="speaking"
+Reaction3="silence (eyes closed)"
+Reaction4="speaking (eyes closed)"
+AnimReset1="Reset animation after reaction"
+AnimReset2="Reset animation reaction"
+AnimReset3="Reset animation reaction"
+AnimReset4="Reset animation reaction"
+UnloadWhenNotShowing="Unload image when source is not visible"
 LinearAlpha="Apply alpha in linear space"
 Threshold="Reaction threshold"
 Smoothness="Smoothness"
 AudioSource="Audio source"
+BlinkPeriod="Number of frames the blinks should be apart"
+TBlink="Number of frames eyes closed"
